# email-mcp

./: .pre-commit-config.yaml  LICENSE  README.md  hello.py  pyproject.toml
.chart/: Chart.yaml  values.yaml
.chart/templates/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
src/api/: app.py
src/api/routes/: base_route.py  mcp_route.py
test/unit/: test_api.py
